Fix spacing in index for introduction text

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,6 +18,13 @@ h3 {
     
 }
 
+.introduction-text {
+    text-align: center;
+    font-size: larger;
+    margin: 20px;
+    padding: 250px 80px;
+  }
+
 footer {
     background-color:#3A4E5F;
     color: #EBEBEB;
